--- a/css.css
+++ b/css.css
@@ -1,4 +1,3 @@
-
 /********** Base styles **********/
 * {
   box-sizing: border-box;
@@ -25,64 +24,36 @@ p {
   width: 100%;
   position:relative;
 }
-#p1{
-  background-color: #DB7093;
+#p1, #p2, #p3{
   border-bottom:3px solid black ;
   border-left:3px solid black;
   width: 150px;
   height: 25px;
   float:right;
-  color:black;
   text-align: center;
   font-weight: 600;
+}
+#p1{
+  background-color: #DB7093;
+  color:black;
 }
 #p2{
   background-color: #B22222;
-  border-bottom:3px solid black ;
-  border-left:3px solid black;
-  width: 150px;
-  height: 25px;
-  float:right;
   color:white;
-  text-align: center;
-  font-weight: 600;
 }
 #p3{
   background-color: #F5F5DC;
-  border-bottom:3px solid black ;
-  border-left:3px solid black;
-  width: 150px;
-  height: 25px;
-  float:right;
   color:black;
-  text-align: center;
-  font-weight: 600;
-  /**font-family:Comic Sans MS, Comic Sans, cursive;**/
 }
-#p4{
-     position: relative;
+#p4, #p5, #p6{
+    position: relative;
     display: inline-block;
     margin-left: 13px;
     margin-right: 3px;
     color:black;
     font-weight: 550;
 }
-#p5{
-     position: relative;
-    display: inline-block;
-    margin-left: 13px;
-    margin-right: 3px;
-    color:black;
-    font-weight: 550;
-}
-#p6{
-     position: relative;
-    display: inline-block;
-    margin-left: 13px;
-    margin-right: 3px;
-    color:black;
-    font-weight: 550;
-}
+
 
 /********** small devices only **********/
 @media (min-width: 992px) {
