--- a/css.css
+++ b/css.css
@@ -27,6 +27,7 @@ p {
 #p1, #p2, #p3{
   border-bottom:3px solid black ;
   border-left:3px solid black;
+  margin-top:2px;
   width: 150px;
   height: 25px;
   float:right;
